--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -6,7 +6,51 @@
     </head>
     <body>
         <script>
-            console.log("Hello World");
+            //create a function called getComputerChoice
+            //create an array that contains three strings: rock, paper, and scissors
+            //the function should return RANDOMLY either Rock, Paper or Scissors
+            //create another function that creates the play
+            //function takes two parameters, player selection and computer selection
+            //Input must be case-insensitive
+            //Compare the computer and player selection
+            //Return a message for each option with victory and loss for each
+            //Create another function called game()
+            //this function plays five rounds of the game, keeps score and reports a winner or loser
+
+            let playerScore = 0;
+            let computerScore = 0;
+            function getComputerChoice() {
+                const options = ['Rock', 'Paper', 'Scissors'];
+                return options[Math.floor(Math.random() * options.length)].toLowerCase();
+            }
+
+            function playRound(playerSelection, computerSelection) {
+                if(playerSelection === computerSelection) {
+                    return `It's a Tie! You both picked ${playerSelection.charAt(0).toUpperCase() + playerSelection.slice(1)}`;
+                } else if (playerSelection === 'rock' && computerSelection === 'scissors') {
+                    console.log(`Player: ${++playerScore} Computer: ${computerScore}`);
+                    return `You Win! Rock beats Scissors`;
+                } else if (playerSelection === 'paper' && computerSelection === 'rock') {
+                    console.log(`Player: ${++playerScore} Computer: ${computerScore}`);
+                    return `You Win! Paper beats Rock`;
+                } else if (playerSelection === 'scissors' && computerSelection === 'paper') {
+                    console.log(`Player: ${++playerScore} Computer: ${computerScore}`);
+                    return `You Win! Scissors beats Paper`;
+                } else {
+                    console.log(`Player: ${playerScore} Computer: ${++computerScore}`);
+                    return `You Lose! ${computerSelection.charAt(0).toUpperCase() + 
+                    computerSelection.slice(1)} beats ${playerSelection.charAt(0).toUpperCase() + playerSelection.slice(1)}`;
+                }
+            }
+
+            function game() {
+                for(let i = 0; i < 5; i++) {
+                let playerSelection = prompt("Enter rock, paper, or scissors", "").toLowerCase();
+                const computerSelection = getComputerChoice();
+                console.log(playRound(playerSelection, computerSelection));
+                }
+            }
+
         </script>
     </body>
 </html>
