--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -3,10 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Rock Paper Scissors</title>
-    </head>
-    <body>
-        <script src="app.js">
-            //create a function called getComputerChoice
+        <script src="app.js" defer>//create a function called getComputerChoice
             //create an array that contains three strings: rock, paper, and scissors
             //the function should return RANDOMLY either Rock, Paper or Scissors
             //create another function that creates the play
@@ -15,9 +12,17 @@
             //Compare the computer and player selection
             //Return a message for each option with victory and loss for each
             //Create another function called game()
-            //this function plays five rounds of the game, keeps score and reports a winner or loser
+            //this function plays five rounds of the game, keeps score and reports a winner or loser</script>
+    </head>
+    <body>
+        <div class = "container">
+            <p>Rock Paper Scissors:</p>
+            <button id = "rock">Rock</button>
+            <button id = "paper">Paper</button>
+            <button id = "scissors">Scissors</button>
+        </div>
+        <div class = "results"></div>
 
-
-        </script>
+       
     </body>
 </html>
